@@ -106,7 +106,8 @@ enum ZOO_ERRORS {
   ZINVALIDACL = -114, /*!< Invalid ACL specified */
   ZAUTHFAILED = -115, /*!< Client authentication failed */
   ZCLOSING = -116, /*!< ZooKeeper is closing */
-  ZNOTHING = -117 /*!< (not error) no server responses to process */
+  ZNOTHING = -117, /*!< (not error) no server responses to process */
+  ZSESSIONMOVED = -118 /*!<session moved to another server, so operation is ignored */ 
 };
 
 #ifdef __cplusplus
