@@ -136,6 +136,9 @@ connected (breed via mahadev)
   ZOOKEEPER-417. stray message problem when changing servers (breed via
 mahadev)
 
+  ZOOKEEPER-449. sesssionmoved in java code and ZCLOSING in C have the same
+value. (mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-308. improve the atomic broadcast performance 3x.
   (breed via mahadev)
